--- a/style.css
+++ b/style.css
@@ -1,31 +1,22 @@
 :root {
-    /* Farbvariablen */
-    --primary-color: rgba(143, 193, 222, 0.51); /* Primärfarbe mit Transparenz */
-    --secondary-color: #672783; /* Sekundärfarbe */
-    --primary-accent-color: #c63fa7; /* Akzentfarbe 1 */
-    --secondary-accent-color: #f2dbaa; /* Akzentfarbe 2 */
-
-    /* Hintergrund- und Textfarben */
-    --background-color: #131022; /* Hintergrundfarbe der Seite */
+    --primary-color: rgb(143, 193, 222);
+    --secondary-color: #672783;
+    --primary-accent-color: #c63fa7;
+    --secondary-accent-color: #f2dbaa;
+    --background-color: #131022;
     --container-background-color: rgba(68, 68, 68, 0.27);
-    --text-color: #e4f1f7; /* Textfarbe */
-
-    /* Allgemeine Gestaltungseigenschaften */
-    --border-radius: 1rem; /* Standard-Rundung für Ecken */
+    --text-color: #e4f1f7;
+    --border-radius: 1rem;
 }
 
 * {
     margin: 0; /* Entfernt den Standard-Margin */
     padding: 0; /* Entfernt den Standard-Padding */
     box-sizing: border-box; /* Stellt sicher, dass Padding und Border in die Breiten- und Höhenberechnung einfließen */
-
-    /* Schriftarten und allgemeine Texteinstellungen */
     font-family: "Inter", sans-serif; /* Schriftart */
     font-optical-sizing: auto; /* Automatische Schriftgrößenanpassung */
     font-weight: 400; /* Normale Schriftstärke */
     font-style: normal; /* Normale Schriftart */
-
-    /* Textfarbe */
     color: var(--text-color); /* Textfarbe aus den Variablen */
 }
 
@@ -47,80 +38,56 @@ main {
     padding: 4rem;
 }
 
-/*TODO: webkit für animation firefox*/
 h1 {
-    /* Benutzerselektion deaktivieren (Text kann nicht markiert werden) */
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Alte Versionen von Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Standard, unterstützt von modernen Browsern */
-
-    /* Textstil */
     font-size: 18rem; /* Schriftgröße */
     font-weight: bolder; /* Schriftstärke */
     letter-spacing: 0.2em; /* Abstand zwischen Buchstaben */
     text-align: center; /* Zentrierter Text */
-
-    /* Layout und Abstände */
     margin: 2rem 2rem 1rem; /* Außenabstand: oben 2rem, rechts/links 2rem, unten 1rem */
     width: 100%; /* Nimmt die volle Breite des Containers ein */
     display: block; /* Block-Level-Element */
     opacity: 1; /* Volle Deckkraft */
-
-    /* Hintergrund für den Text */
     background-image: url('/bilder/hintergrundbilder/hintergrundbild1.webp'); /* Hintergrundbild */
     background-size: cover; /* Bild bedeckt das gesamte Element */
     background-position: center; /* Bild wird zentriert */
     background-repeat: no-repeat; /* Kein Wiederholen des Hintergrundbilds */
     background-attachment: fixed; /* Bild bleibt fixiert beim Scrollen */
-
-    /* Hintergrundclip für Texteffekt */
     -webkit-background-clip: text; /* Webkit-basiert (Safari, Chrome) */
     background-clip: text; /* Standard-Version für den Textclip */
     color: transparent; /* Text ist unsichtbar, nur Hintergrund wird angezeigt */
-
-    /* Animation */
     animation: revealText 6s ease forwards; /* Animation: Text wird schrittweise sichtbar */
 }
 
-/*TODO: webkit für animation firefox*/
 h2 {
-    /* Benutzerselektion deaktivieren (Text kann nicht markiert werden) */
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Alte Versionen von Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Standard, unterstützt von modernen Browsern */
-
-    /* Textstil */
     font-size: 4rem; /* Schriftgröße */
     font-weight: bolder; /* Schriftstärke */
     letter-spacing: 0.1em; /* Abstand zwischen Buchstaben */
     text-align: center; /* Zentrierter Text */
     text-shadow: 1px 1px; /* Leichter Schatten für den Text */
-
-    /* Layout und Abstände */
     margin: 5rem 1rem; /* Außenabstand: oben/unten 5rem, links/rechts 1rem */
     width: 100%; /* Nimmt die volle Breite des Containers ein */
     display: block; /* Block-Level-Element */
     opacity: 1; /* Volle Deckkraft */
-
-    /* Hintergrund für den Text */
     background-image: url('bilder/hintergrundbilder/background5.webp'); /* Hintergrundbild */
     background-size: cover; /* Bild bedeckt das gesamte Element */
     background-position: center; /* Bild wird zentriert */
     background-repeat: no-repeat; /* Kein Wiederholen des Hintergrundbilds */
     background-attachment: fixed; /* Bild bleibt fixiert beim Scrollen */
-
-    /* Hintergrundclip für Texteffekt */
     -webkit-background-clip: text; /* Webkit-basiert (Safari, Chrome) */
     background-clip: text; /* Standard-Version für den Textclip */
     color: transparent; /* Text ist unsichtbar, nur Hintergrund wird angezeigt */
-
-    /* Animation */
     animation: revealText 6s ease forwards; /* Animation: Text wird schrittweise sichtbar */
 }
 
@@ -217,7 +184,7 @@ nav li a::before {
     left: 0; /* Links ausrichten */
     width: 100%; /* Breite 100% des Elternelements */
     height: 100%; /* Höhe 100% des Elternelements */
-    background-image: url('bilder/hintergrundbilder/jeremy-thomas-4dpAqfTbvKA-unsplash.jpg'); /* Hintergrundbild */
+    background-image: url('bilder/hintergrundbilder/hintergrundbild1.webp'); /* Hintergrundbild */
     background-size: cover; /* Bild deckt das Element ab */
     background-position: center; /* Bild wird zentriert */
     opacity: 0; /* Zu Beginn unsichtbar */
@@ -247,14 +214,15 @@ nav li a img {
 .parallax-window {
     position: relative;
     width: 100%;
+    max-width: 1200px;
     height: 200px;
-    border: 5px solid rgba(68, 68, 68, 0.27);
+    border: 5px solid var(--container-background-color);
     border-radius: var(--border-radius);
     overflow: hidden;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-    margin-bottom: 50px;
+    margin: 50px auto;
 }
 
 .parallax-window-1 {
@@ -275,42 +243,66 @@ nav li a img {
 
 .container {
     position: relative;
-    background-color: var(--container-background-color);
     width: 100%;
-    height: 700px;
-    border: 5px solid rgb(40, 40, 40);
+    max-width: 1200px;
+    height: auto;
+    border: 5px solid var(--container-background-color);
     border-radius: var(--border-radius);
-    margin-bottom: 50px;
-    align-items: center;
-    display: flex;
+    background-color: var(--container-background-color);
     overflow: hidden;
+    margin: 50px auto;
+    display: flex;
 }
 
 .container img {
     width: 50%;
     object-fit: cover;
+    border-right: 5px solid var(--container-background-color);
 }
 
 .container-description {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 40px;
+    width: 50%;
+    background-color: var(--container-background-color);
 }
 
 .container-description h1 {
-    width: 50%;
-    margin: 0;
-    padding: 20px;
+    margin: 0 0 20px;
     text-align: center;
-    color: var(--text-color);
-    font-size: 1.2rem;
+    color: var(--primary-color);
+    font-size: 2rem;
+    font-weight: bold;
 }
 
 .container-description p {
-    width: 50%;
-    margin: 0;
-    padding: 20px;
-    text-align: center;
+    margin: 0 0 15px;
     color: var(--text-color);
-    font-size: 1.2rem;
+    font-size: 1rem;
+    line-height: 1.6;
+    text-align: justify;
+}
+
+.container-description p:last-of-type {
+    margin-bottom: 0;
+}
+
+.container-description a {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: var(--background-color);
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size: 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.container-description a:hover {
+    background-color: var(--secondary-color);
 }
 
 .footer {
